--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
 
-  <h1>🌿 Generador de Poemas 🌿</h1>
+  <h1>🌿 OULIPÓ 2.0 🌿</h1>
   <button onclick="generarPoema()">Generar poema</button>
   <div class="poema" id="poema"></div>
 
