--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -77,41 +76,41 @@
 </head>
 <body>
 
-  <h1>🌿 OULIPÓ 2.0 🌿</h1>
+  <h1>🌿 OULIPÓ 2.0c 🌿</h1>
   <button onclick="generarPoema()">Generar poema</button>
   <div class="poema" id="poema"></div>
 
   <script>
     const versos = [
-      "El siervo elige cuidadosamente todos los utensilios",
-      "Al mecerse entre las costillas de la noche",
+      "el siervo elige cuidadosamente todos los utensilios",
+      "al mecerse entre las costillas de la noche",
       "¿podrías alcanzarme las batatas?",
-      "Quiero besarte hasta que muera",
+      "quiero besarte hasta que muera",
       "pum pum, palito palito dos",
-      "Que cielo elige tu cara para verte",
+      "que cielo elige tu cara para verte",
       "podrías sentirme cerca",
-      "Quiero morirme hasta besarte",
-      "Para vos, ¿que significa el azul?",
+      "quiero morirme hasta besarte",
+      "para vos, ¿que significa el azul?",
       "Popolipó popó lipó",
-      "No elijo más el camino fácil",
-      "Voy a elegir el camino más largo",
-      "Hay ochocientos ojos haciendome guiños",
-      "Yo solo cierro el alma",
-      "Mis manos buscan con desesperación hacerte un mimito",
-      "El tiempo no borra tu perfume",
-      "Los trenes parten hacia el olvido",
-      "Una vela arde",
+      "no elijo más el camino fácil",
+      "voy a elegir el camino más largo",
+      "hay ochocientos ojos haciendome guiños",
+      "yo solo cierro el alma",
+      "mis manos buscan con desesperación hacerte un mimito",
+      "el tiempo no borra tu perfume",
+      "los trenes parten hacia el olvido",
+      "una vela arde",
       "no, por dios no, no quiero nada con vos",
-      "El cielo enrojecido se despide",
-      "Hay mensajitos que nunca se abrieron",
-      "El silencio pesa",
-      "Por ahi todavía te acordás de los abrazos que me diste",
-      "Mia, tuya, tuya, tuya",
-      "¿Nos queremos?",
-      "Dame las flores que te regalé",
-      "Pasado, todo es pasado",
+      "el cielo enrojecido se despide",
+      "hay mensajitos que nunca se abrieron",
+      "el silencio pesa",
+      "por ahi, todavía te acordás de los abrazos que me diste",
+      "mia, tuya, tuya, tuya",
+      "¿nos queremos?",
+      "dame las flores que te regalé",
+      "pasado, todo es pasado",
       "cristalitos, ojos , cristalitos",
-      "Hagámosnos mimos",
+      "hagámosnos los otros",
       "Encontrame, por favor, encontrame"
     ];
 
@@ -133,139 +132,3 @@
 
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Generador de Poemas</title>
-  <style>
-    /* Body centrado y con padding para no pegarse a los bordes */
-    body {
-      font-family: 'Georgia', serif;
-      background-color: #fff8f0;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1.5rem 1rem;
-      margin: 0;
-      min-height: 100vh;
-      box-sizing: border-box;
-    }
-
-    /* Tamaño de fuente más legible en móvil */
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-      text-align: center;
-      line-height: 1.2;
-    }
-
-    /* Botón grande y cómodo para tocar */
-    button {
-      padding: 14px 28px;
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      cursor: pointer;
-      border: none;
-      border-radius: 8px;
-      background-color: #4caf50;
-      color: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: background-color 0.3s ease;
-      user-select: none;
-      max-width: 90vw;
-    }
-    button:hover,
-    button:focus {
-      background-color: #45a049;
-      outline: none;
-    }
-
-    /* Contenedor del poema adaptable al ancho móvil */
-    .poema {
-      margin-top: 1.8rem;
-      font-size: 1.1rem;
-      white-space: pre-line;
-      max-width: 90vw;
-      text-align: left;
-      line-height: 1.5;
-      word-break: break-word;
-    }
-
-    /* Para pantallas grandes, que el max-width no se quede muy pequeño */
-    @media (min-width: 600px) {
-      .poema {
-        max-width: 600px;
-        font-size: 1.3rem;
-      }
-      button {
-        max-width: 300px;
-      }
-      h1 {
-        font-size: 2.5rem;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <h1>🌿 OULIPÓ 2.0 🌿</h1>
-  <button onclick="generarPoema()">Generar poema</button>
-  <div class="poema" id="poema"></div>
-
-  <script>
-    const versos = [
-      "El siervo elige cuidadosamente todos los utensilios",
-      "Al mecerse entre las costillas de la noche",
-      "¿podrías alcanzarme las batatas?",
-      "Quiero besarte hasta que muera",
-      "pum pum, palito palito dos",
-      "Que cielo elige tu cara para verte",
-      "podrías sentirme cerca",
-      "Quiero morirme hasta besarte",
-      "Para vos, ¿que significa el azul?",
-      "Popolipó popó lipó",
-      "No elijo más el camino fácil",
-      "Voy a elegir el camino más largo",
-      "Hay ochocientos ojos haciendome guiños",
-      "Yo solo cierro el alma",
-      "Mis manos buscan con desesperación hacerte un mimito",
-      "El tiempo no borra tu perfume",
-      "Los trenes parten hacia el olvido",
-      "Una vela arde",
-      "no, por dios no, no quiero nada con vos",
-      "El cielo enrojecido se despide",
-      "Hay mensajitos que nunca se abrieron",
-      "El silencio pesa",
-      "Por ahi todavía te acordás de los abrazos que me diste",
-      "Mia, tuya, tuya, tuya",
-      "¿Nos queremos?",
-      "Dame las flores que te regalé",
-      "Pasado, todo es pasado",
-      "cristalitos, ojos , cristalitos",
-      "Hagámosnos mimos",
-      "Encontrame, por favor, encontrame"
-    ];
-
-    function generarPoema() {
-      let versosSeleccionados = [];
-
-      // Elegir 4 versos únicos
-      while (versosSeleccionados.length < 4) {
-        const verso = versos[Math.floor(Math.random() * versos.length)];
-        if (!versosSeleccionados.includes(verso)) {
-          versosSeleccionados.push(verso);
-        }
-      }
-
-      // Mostrar el poema
-      document.getElementById('poema').innerText = versosSeleccionados.join('\n');
-    }
-  </script>
-
-</body>
-</html>
->>>>>>> bbab6ad695413096a27ea423b048432350ac6471
