--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
       document.getElementById('poema').innerText = versosSeleccionados.join('\n');
     }
   </script>
-
+<footer style="margin-top: 3rem; font-size: 0.9rem; color: #666; text-align: center; font-style: italic;">
+  Axel Dominguez 2025 la luz y la sorpresa
+</footer>
 </body>
 </html>
