--- a/index.html
+++ b/index.html
@@ -129,8 +129,20 @@
       document.getElementById('poema').innerText = versosSeleccionados.join('\n');
     }
   </script>
-<footer style="margin-top: 3rem; font-size: 0.9rem; color: #666; text-align: center; font-style: italic;">
-  Axel Dominguez 2025 la luz y la sorpresa
+<footer style="
+position: fixed;
+bottom: 0;
+width: 100%;
+background-color: #fff8f0;
+color: #666;
+text-align: center;
+font-style: italic;
+padding: 0.8rem 0;
+box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+font-size: 0.9rem;
+z-index: 1000;
+">
+axel dominguez 2025 la luz y la sorpresa
 </footer>
 </body>
 </html>
