--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
 font-size: 0.9rem;
 z-index: 1000;
 ">
-axel dominguez 2025 la luz y la sorpresa
+Axel Do, para La Luz y la Sorpresa, 2025
 </footer>
 </body>
 </html>
