--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
   <h1>🌿 OULIPÓ 2.0 🌿</h1>
-  <button onclick="generarPoema()">Generar poema</button>
+  <button onclick="generarPoema()"> Tocá acá si querés un poema increíble</button>
   <div class="poema" id="poema"></div>
 
   <script>
@@ -142,7 +142,7 @@ box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
 font-size: 0.9rem;
 z-index: 1000;
 ">
-Axel Do, para La Luz y la Sorpresa, 2025
+Axel Do, La Luz y la Sorpresa, 2025
 </footer>
 </body>
 </html>
