--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
         setTimeout(typePoem, 25); // Velocidad de tipeo
 
     }
+  }
+    typePoem();
   </script>
 <footer style="
 position: fixed;
