--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
       "pasado, todo es pasado",
       "cristalitos, ojos , cristalitos",
       "hagámosnos los otros",
+      "Y así llegó, la sorpresa esperada",
+      "El aire batió con desdén",
+      "Las mariposas brotan de mi espalda",
+      "No me dejan dormir",
+      "Dos voces conocidas que me hablan",
+      "Me dicen que no pare",
       "Encontrame, por favor, encontrame"
     ];
    
