--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <script>
     const versos = [
-      "el siervo elige cuidadosamente todos los utensilios",
+      "el siervo elige cuidadosamente",
       "al mecerse entre las costillas de la noche",
       "¿podrías alcanzarme las batatas?",
       "quiero besarte hasta que muera",
@@ -104,7 +104,6 @@
       "el cielo enrojecido se despide",
       "hay mensajitos que nunca se abrieron",
       "el silencio pesa",
-      "por ahi, todavía te acordás de los abrazos que me diste",
       "mia, tuya, tuya, tuya",
       "¿nos queremos?",
       "dame las flores que te regalé",
@@ -115,8 +114,15 @@
       "El aire batió con desdén",
       "Las mariposas brotan de mi espalda",
       "No me dejan dormir",
-      "Dos voces conocidas que me hablan",
-      "Me dicen que no pare",
+      "dos voces conocidas que me hablan",
+      "me dicen que no pare",
+      "parece que nos mudamos",
+      "el sol que se pega en el vidrio",
+      "tanta velocidad",
+      "acortan la distancia",
+      "la cantidad de pasos",
+      "toda la sombra posible",
+
       "Encontrame, por favor, encontrame"
     ];
    
