--- a/index.html
+++ b/index.html
@@ -121,14 +121,16 @@
       "tanta velocidad",
       "acortan la distancia",
       "la cantidad de pasos",
+      "Recuerdo que cerré la puerta y me tapé los ojos, me faltaron manos para no escucharte",
+      "Aplasto letras de vidrio",
+      "Faltan manos para no escucharlas estallar entre los pasos",
       "toda la sombra posible",
-
       "Encontrame, por favor, encontrame"
     ];
    
     function generarPoema() {
     const contenedor = document.getElementById('poema');
-    contenedor.innerHTML = ''; // Limpiar el contenido anterior
+    contenedor.innerHTML = '';
 
     // Seleccionar 4 versos únicos
     let versosSeleccionados = [];
