--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       "tanta velocidad",
       "acortan la distancia",
       "la cantidad de pasos",
-      "Recuerdo que cerré la puerta y me tapé los ojos, me faltaron manos para no escucharte",
+      "Recuerdo que cerré la puerta y me tapé los ojos",
+      "me faltaron manos para no escucharte",
       "Aplasto letras de vidrio",
       "Faltan manos para no escucharlas estallar entre los pasos",
       "toda la sombra posible",
