--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
       "Aplasto letras de vidrio",
       "Faltan manos para no escucharlas estallar entre los pasos",
       "toda la sombra posible",
+      "salir corriendo por el verde sin límite",
+      "porque del otro lado está ese sol",
       "Encontrame, por favor, encontrame"
     ];
    
