--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
       "toda la sombra posible",
       "salir corriendo por el verde sin límite",
       "porque del otro lado está ese sol",
+      "Y cuando nadie nos busque?",
+      "Será la próxima parada",
+      "Un beso tibio al amanecer",
+      "La mano contenta",
+      "Un cartel, una caricia",
+      "Te dije que el sabor era distinto",
+      "Viajé para encontrarla",
+      "La misma ropa? Es intuición",
+      "No te he mentido jamás",
+      "Hablaste de convertirnos, de ser uno",
+      "Nadie puede decirte, hasta dónde y cómo llorar",
+      "Cuál es tu recuerdo más feliz nuestro?",
+      "Todo lo que creías limpio, te lastima",
       "Encontrame, por favor, encontrame"
     ];
    
