--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
       "toda la sombra posible",
       "salir corriendo por el verde sin límite",
       "porque del otro lado está ese sol",
-      "Y cuando nadie nos busque?",
-      "Será la próxima parada",
-      "Un beso tibio al amanecer",
-      "La mano contenta",
-      "Un cartel, una caricia",
-      "Te dije que el sabor era distinto",
-      "Viajé para encontrarla",
-      "La misma ropa? Es intuición",
-      "No te he mentido jamás",
-      "Hablaste de convertirnos, de ser uno",
-      "Nadie puede decirte, hasta dónde y cómo llorar",
-      "Cuál es tu recuerdo más feliz nuestro?",
-      "Todo lo que creías limpio, te lastima",
-      "Encontrame, por favor, encontrame"
+      "y cuando nadie nos busque?",
+      "será la próxima parada",
+      "un beso tibio al amanecer",
+      "la mano contenta",
+      "un cartel, una caricia",
+      "te dije que el sabor era distinto",
+      "viajé para encontrarla",
+      "la misma ropa? Es intuición",
+      "no te he mentido jamás",
+      "hablaste de convertirnos, de ser uno",
+      "nadie puede decirte, hasta dónde y cómo llorar",
+      "cuál es tu recuerdo más feliz nuestro?",
+      "todo lo que creías limpio, te lastima",
+      "encontrame, por favor, encontrame"
     ];
    
     function generarPoema() {
