--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
       "nadie puede decirte, hasta dónde y cómo llorar",
       "cuál es tu recuerdo más feliz nuestro?",
       "todo lo que creías limpio, te lastima",
+      "De noche,",
+    "un mosquito",
+    "entró por la ventana abierta",
+    "del baño.",
+    "El chupasangre pasó por mi pieza,",
+    "durante un buen rato se escuchó",
+    "muy cerca de mi oido",
+    "su característico sonido agudo,",
+    "hasta que prendí la luz de la lámpara y...",
+    "¡PLAF!",
+    "la apago y me vuelvo a acostar",
       "encontrame, por favor, encontrame"
     ];
    
