--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       max-width: 90vw;
       text-align: left;
       line-height: 1.5;
-      word-break: break-word;
+      overflow-wrap: break-word;
+      word-break: normal;
     }
 
     /* Para pantallas grandes, que el max-width no se quede muy pequeño */
